--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -12,6 +12,7 @@
         <div>
           <% if current_user == micropost.user %>
             <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: "btn btn-danger btn-sm" %>
+            <%= link_to "Favorite", favorites_path(micropost_id: micropost.id), method: :post, class: "btn btn-primary btn-sm" %>
           <% end %>
         </div>
       </div>
